# ChangeLog for app-emulation/libvirt
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/libvirt/ChangeLog,v 1.307 2013/08/10 03:19:51 cardoe Exp $

  10 Aug 2013; Doug Goldstein <cardoe@gentoo.org>
  -files/libvirt-1.0.6-CVE-2013-2218.patch,
  -files/libvirt-1.0.6-virinterface-udev-backend-ro.patch,
  -files/libvirt-1.1.0-CVE-2013-2230.patch, -files/libvirtd.init-r11,
  -libvirt-1.1.0-r3.ebuild:
  Remove older version and older files

  10 Aug 2013; Doug Goldstein <cardoe@gentoo.org> libvirt-1.1.1-r1.ebuild,
  libvirt-9999.ebuild:
  Fix up a few missing options from kernel feature detection.

  07 Aug 2013; Agostino Sarubbo <ago@gentoo.org> libvirt-1.1.1-r1.ebuild:
  Stable for amd64, wrt bug #480134

  06 Aug 2013; Doug Goldstein <cardoe@gentoo.org> -libvirt-1.1.1.ebuild:
  Remove straight 1.1.1 version

*libvirt-1.1.1-r1 (06 Aug 2013)

  06 Aug 2013; Doug Goldstein <cardoe@gentoo.org> +libvirt-1.1.1-r1.ebuild:
  Fix crash in legacy xen driver. Re-enable tunnelled migration with new qemu's
  but warn we won't be able to use the newer nbd based migration.

  02 Aug 2013; Doug Goldstein <cardoe@gentoo.org> -libvirt-1.0.5.2.ebuild,
  libvirt-1.0.5.4.ebuild, libvirt-1.1.0-r3.ebuild:
  Ensure dev-lang/perl is in DEPEND. bug #472722

  31 Jul 2013; Doug Goldstein <cardoe@gentoo.org> libvirt-1.1.1.ebuild:
  Add a dodir to potentially fix bug #478830

  30 Jul 2013; Doug Goldstein <cardoe@gentoo.org> libvirt-9999.ebuild:
  Update live ebuild to latest iteration of the ebuild

*libvirt-1.1.1 (30 Jul 2013)

  30 Jul 2013; Doug Goldstein <cardoe@gentoo.org> +libvirt-1.1.1.ebuild,
  -libvirt-1.1.0-r4.ebuild:
  git submodule updates cause patchsets to not apply, go with the latest release
  instead

  30 Jul 2013; Agostino Sarubbo <ago@gentoo.org> libvirt-1.1.0-r3.ebuild:
  Stable for amd64, wrt bug #478688

*libvirt-1.1.0-r4 (29 Jul 2013)
