@@ -4,23 +4,25 @@ Hash: SHA256
 AUX libvirtd.confd-r4 2015 SHA256 c2ca5d9a2d4ed433e91bd215c2ca678109cc981072897a497955e36760dc3b9f SHA512 b3e1d2433be7838a35386747422a8f98f2a7f6a92a03089f9472eb8ee2efb7d10d2becd363fea7cdaf8771da31b58cd60d192b25e089b6257ad5341b1074e540 WHIRLPOOL 284e72e704b759433d5ddc1a3e4019164dda6b48cb2734ea9a6780747938bba2855a99dcf1b125ab3f500a6145315cafa4a3531ff6938c0c62e5b1a6f99ea9b3
 AUX libvirtd.init-r12 3668 SHA256 bae1b0766423b8ff879a7490a2b3e6381029638558923d8c0047414e97b881a5 SHA512 b24cf7dd0f6db454bb23bf4e9c4d40050f6d5aaa43f5b95a04238e028f1cb5c735ba605f6f01caf814f2d2a36407abc6fd1d751e66887fc7af78d543e4b61dd6 WHIRLPOOL 3c04c3acfa061144d16e1e9f2b35e37437855b0162d3ce0d7d3d39618fcfe855d8e82fdf4e16aee8d6cc591424d3d0875a32edd02646e02203b5ca239b7f5d64
 DIST libvirt-1.0.5.4.tar.gz 23972364 SHA256 fe51da9d5c3d5e8521d0c89a3379ec3b19083a31e30bc4eb54a860aa6ccf2771 SHA512 f44006f5cf00e4682266a306c819075471abb52cd9816bd75e0b83962bcb4a085fc0ffc94b688bedbc4042489a2997b77ebd1aad6f1560abe808140a24682865 WHIRLPOOL 0d6609f9d437e344f6c5b74f1c34c24004e256efd784b61f35fa68483086213a47fe27e2ec5f5f4e2ce7bbb7a02c2dabe75511e8686221b6b9be6d2719dccd0e
+DIST libvirt-1.1.1-6e020882.tar.xz 3964 SHA256 15e6d7783a8b316ebbbe2b0983419c3c1706bdc6bf7bcce2256aa96d64fb9996 SHA512 36738efd5e6585eb53878fee6c3787515c5cdb3cf378914690551db7dcc14542181adc9c3a6b60c3099e69226e6461ec97f72321914de568cca3e9413a33857b WHIRLPOOL 4506d6e754e637b19375140d6899f03b0958659e4c804a91587fddd19ce7ddd4651a2e12aa948a93fab3bf5c1fc70f35a73383a1fabb49635ea1ec12c4608a2b
 DIST libvirt-1.1.1-864bcb0e.tar.xz 2108 SHA256 71bc272a7726a1a46926aca1abb8b4a8ee7f973671781e6ea4c9b29432ec9f63 SHA512 c04ec503161b03454895079cd9bbf2345ee6b489e08a7bef92c4a54237ca75a08048fed522baa759a5689735d9608f4ad3ad69ce47a630a72d5995ef955e81ab WHIRLPOOL 25ef1c2f212ab619afc0490cd613ed14a3ac80c7dafd824edc2264fc51ac092b0042d7399f9d49ab1f9411c85e10cde02ae150fb88fe81d17989b7708e3a0a6e
 DIST libvirt-1.1.1.tar.gz 25420278 SHA256 dc6f1e1e15b9b190eaa706e76edabcfc94b239c012f5afc22b22357a4b3b22c2 SHA512 9f121827913cd99ba14ebf5755e679da5010e8784a16bc9ef9f49cfd8bf4d4335e6c200401b0592fe77a431d3de9a1b360695a515e5eb789cf675f087194cc4a WHIRLPOOL dca3fd4daebf1ba7c1d428d7a8ce7fb08b281751718fb8d7016537cbad3e08355953f1682d1239c312602b424b682d96d715085ed2e8e4ea6985140f08367093
 EBUILD libvirt-1.0.5.4.ebuild 12203 SHA256 52763c34f2758614268ca4b9b69689769cc02dba5b465d4a10a914cd2706409b SHA512 7ecc6a2bdf703ee0302e376d545f7ec77abd90d95ac2db34bb39a34217a3106021c7246de8c507741845b352a4fa66e32f99a1f7c3390a027f50c68014ee58ff WHIRLPOOL 7b99823e66b400402ec332e399f0b153dda55a88bc16e2e8a6e2abbb57b878d98992177764a3474e9bf136441f82317ff17d9d58472f8dde92dd78131ffa35bf
 EBUILD libvirt-1.1.1-r1.ebuild 12214 SHA256 b0e7740008c8b48fbc4ae1868ca3009da84987b79eb43d457e01271f3260b5f2 SHA512 2fd83ce180d0964834a25d930316b07836e33f4e6a4162ae41b03f0c0653d31a6a40bc8c900d40c761a1ca7cdc7a404efeb8bedad9bf015bf14bf35216db7a7d WHIRLPOOL 794e1b613d9ee7619c7351ae4d20c06ae3bcb120201a6339d1956d5a3e20fd64f77417a522944f21bbf541da25ec9c86770fc88fbdbfda350fd89a8204dae13a
+EBUILD libvirt-1.1.1-r2.ebuild 12133 SHA256 aa6423d92bf3547e5165467027c595f1c073e60eb5e2bf3dea0ad269b7053ae9 SHA512 9d041f48cef80c4799501c292181c0f3d229da50088f50deb91bc0afd830f0837e4a60ab1d9f58bcf74baa29921350c1410f831ca1124ed64013e25f94e196ec WHIRLPOOL ef483af8f1d7b8df955128e32b79def6c842595671d255673b6a1e72dfd6b9faa8bbf7e2f85b929ac5fef00da8c328350c4c7fc31907ac3a5c9e596365de97e5
 EBUILD libvirt-9999.ebuild 12212 SHA256 7eb7b50bfbd5afa1120ed7344c899e97e118a15c25e35a0bc33290b12f99c708 SHA512 6f99a6df3eb85c7430c7d8433adae8dcec79837a0205818e6d7ba0ca67ba7e05036e7250c534b88f26f9368a1dbb33c59477cbbd0cd3e5facfa9def9ba38f07f WHIRLPOOL 33790b4500d77d75dd30445e2d15a70decd75084cdcf05f7d8ddeb84cc2081e659f0e75cbf5a35a38dc7d703ebeef693a2d869ea6f8f9816dcc765e4e7be1a07
-MISC ChangeLog 9791 SHA256 57d9d63c281bb2f5d06b18ab59cc73a36b9c0d5c5014d3c4ffa0046e4ac5eb21 SHA512 1fca11d0dfd8bc1d4e61b765cfed6aff2fd2a80143fbc4a41eb34ffb7c27c380a913cbfac4a46fb1a9f09b5c2e8161b9587f65a89edf8a7f8d903375d560dfe5 WHIRLPOOL 7526a10d516ff33fc720ea5583d3839d3666c971e15a5e3ef57d3d70dded6d1281fa78c1187e1f3afe41ecec8076105e462bc79962fcab057f9d0eef54d403f8
+MISC ChangeLog 10134 SHA256 6243427c7892c1cf34fc48b6f5ae5ef1e236a0274fc6a9c1bf7d411f7b4f2803 SHA512 5be68f968ac19f45b92e918fb5ffb67b2d3dc3736b2ed2c76d2e5419af1e12a8c58fcb4cf3ebe366a25b0d1bf06abd835826a9dd70f621e9f2dc0395a11f3a8d WHIRLPOOL 7d23130b6951579910eb72921efa39dbe09cec758064496cfb138c901b79d1f53741e838688ea25f6347a7abfb66a6ce10ed9e0b3463c9125c3f914c9128c96b
 MISC metadata.xml 3534 SHA256 8678edfd233eaa04266d7e15f71102fb45d1e4843697ba0cd04fe57b45dbb6c6 SHA512 e4b2cc5f9001697b784034ae6e58fea39e9fdc223192772592bcb671a4e1436186ed7757fc72993ee81c1e4005502fbb8c0a2d4588666a186d42024a98c052a2 WHIRLPOOL 9f32ac2763d17e5204da7396eae2a8c79c63e1e82b4a1035c86d93c029902159d3f5697aad86b7307b6e8acee0a4f0f02023d0e5e824a471cdad80a5cebc6886
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQF8BAEBCABmBQJSBbFYXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQF8BAEBCABmBQJSBbkpXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXRDMDRGNEJFMDZEQTJGRUY3NkI4MEM3NTlE
-N0RGQThEMzE4RkE5QUVGAAoJENffqNMY+prvcloH/2b/rRoG9oe1m18YL0cYNMoS
-en1+HTMxAW/lvmAJd17y5lc8xBY2XYfdx0Pw5acsG4CqnYFZIdvfrustalIbx3HS
-PusRluB1tw7H0PnnBzWOLmnmBLKhzFqRSdo6T7FtDFhQLQQYBj0zDlvZAitx5mAq
-+KzRaF0QK2EoymuCOfA2kOmt1YkhsUcb61DfkmYA9CZp87poTGFIzZ1HXMS7jY1c
-e59T75n7w1V9t6dw1qjadCgzZBPWCo5czDNBe26EeaIkrBOM32L9mg3dKD7pPJg/
-V+n1CUa+QzfUEEmjluNtQSyl1SZphUHgnXSUDy7pq+h24+BkGTISuChCjAN+lig=
-=Cke/
+N0RGQThEMzE4RkE5QUVGAAoJENffqNMY+prvmGsIAKZnePIYDTp83W+KDKFVUKoZ
+AMMhzHcrkhckXXpLfVpCk43nlHkMw8cxQomqohBYKmmng1vW9MN2oovjPrgOA4Vg
+lAQqBiBrpEkFQlrdP1CFRjOeT8hsXcw5kPmSopRdM9VcDDAAg9ZnzcJ/qdp03NTp
+KKSsiGWfi99Q3FGSWQ+5kGeJeVbUHjgxgeqwxsawYsavR5VE+lW0CGCaUNUziQgN
+TMgBgIi0bbe/+JJdTHyad6BQXBZtjHbfJxVs8cgJwS2Hz7r4AbeRg5wqMffbIPth
+K1vYd5SdKAfP0GFlmV8131YzGv2cLU/4nxsJiKAv3hrOtvaAAy+JSU2eWP2+BT8=
+=o1bk
 -----END PGP SIGNATURE-----
