@@ -1,0 +1,14 @@
+DEFINED_PHASES=configure install postinst preinst prepare setup test
+DEPEND=sys-libs/readline sys-libs/ncurses >=net-misc/curl-7.18.0 dev-libs/libgcrypt >=dev-libs/libxml2-2.7.6 dev-libs/libnl:3 >=net-libs/gnutls-1.0.25 net-libs/libssh2 sys-apps/dmidecode >=sys-apps/util-linux-2.17 sys-devel/gettext >=net-analyzer/netcat6-1.0-r2 app-misc/scrub audit? ( sys-process/audit ) avahi? ( >=net-dns/avahi-0.6[dbus] ) caps? ( sys-libs/libcap-ng ) fuse? ( >=sys-fs/fuse-2.8.6 ) iscsi? ( sys-block/open-iscsi ) lxc? ( sys-power/pm-utils ) lvm? ( >=sys-fs/lvm2-2.02.48-r2 ) nfs? ( net-fs/nfs-utils ) numa? ( >sys-process/numactl-2.0.2 sys-process/numad ) openvz? ( sys-kernel/openvz-sources ) parted? ( >=sys-block/parted-1.8[device-mapper] sys-fs/lvm2 ) pcap? ( >=net-libs/libpcap-1.0.0 ) policykit? ( >=sys-auth/polkit-0.9 ) python? ( python_single_target_python2_5? ( dev-lang/python:2.5 ) python_single_target_python2_6? ( dev-lang/python:2.6 ) python_single_target_python2_7? ( dev-lang/python:2.7 ) dev-python/python-exec[python_targets_python2_5(-)?,python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_single_target_python2_5(+)?,python_single_target_python2_6(+)?,python_single_target_python2_7(+)?] ) qemu? ( >=app-emulation/qemu-0.13.0 dev-libs/yajl sys-power/pm-utils ) rbd? ( sys-cluster/ceph ) sasl? ( dev-libs/cyrus-sasl ) selinux? ( >=sys-libs/libselinux-2.0.85 ) virtualbox? ( || ( app-emulation/virtualbox >=app-emulation/virtualbox-bin-2.2.0 ) ) xen? ( app-emulation/xen-tools app-emulation/xen ) udev? ( virtual/udev >=x11-libs/libpciaccess-0.10.9 ) virt-network? ( net-dns/dnsmasq >=net-firewall/iptables-1.4.10 net-misc/radvd net-firewall/ebtables sys-apps/iproute2[-minimal] firewalld? ( net-firewall/firewalld ) ) elibc_glibc? ( || ( >=net-libs/libtirpc-0.2.2-r1 <sys-libs/glibc-2.14 ) ) virtual/pkgconfig app-text/xhtml1 dev-lang/perl dev-libs/libxslt || ( >=sys-devel/automake-1.12:1.12 >=sys-devel/automake-1.13:1.13 ) >=sys-devel/autoconf-2.68 sys-devel/libtool virtual/pkgconfig
+DESCRIPTION=C toolkit to manipulate virtual machines
+EAPI=5
+HOMEPAGE=http://www.libvirt.org/
+IUSE=audit avahi +caps firewalld fuse iscsi +libvirtd lvm lxc +macvtap nfs nls numa openvz parted pcap phyp policykit python +qemu rbd sasl selinux +udev uml +vepa virtualbox virt-network xen elibc_glibc systemd python_targets_python2_5 python_targets_python2_6 python_targets_python2_7 python_single_target_python2_5 python_single_target_python2_6 python_single_target_python2_7
+KEYWORDS=~amd64 ~x86
+LICENSE=LGPL-2.1
+RDEPEND=sys-libs/readline sys-libs/ncurses >=net-misc/curl-7.18.0 dev-libs/libgcrypt >=dev-libs/libxml2-2.7.6 dev-libs/libnl:3 >=net-libs/gnutls-1.0.25 net-libs/libssh2 sys-apps/dmidecode >=sys-apps/util-linux-2.17 sys-devel/gettext >=net-analyzer/netcat6-1.0-r2 app-misc/scrub audit? ( sys-process/audit ) avahi? ( >=net-dns/avahi-0.6[dbus] ) caps? ( sys-libs/libcap-ng ) fuse? ( >=sys-fs/fuse-2.8.6 ) iscsi? ( sys-block/open-iscsi ) lxc? ( sys-power/pm-utils ) lvm? ( >=sys-fs/lvm2-2.02.48-r2 ) nfs? ( net-fs/nfs-utils ) numa? ( >sys-process/numactl-2.0.2 sys-process/numad ) openvz? ( sys-kernel/openvz-sources ) parted? ( >=sys-block/parted-1.8[device-mapper] sys-fs/lvm2 ) pcap? ( >=net-libs/libpcap-1.0.0 ) policykit? ( >=sys-auth/polkit-0.9 ) python? ( python_single_target_python2_5? ( dev-lang/python:2.5 ) python_single_target_python2_6? ( dev-lang/python:2.6 ) python_single_target_python2_7? ( dev-lang/python:2.7 ) dev-python/python-exec[python_targets_python2_5(-)?,python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_single_target_python2_5(+)?,python_single_target_python2_6(+)?,python_single_target_python2_7(+)?] ) qemu? ( >=app-emulation/qemu-0.13.0 dev-libs/yajl sys-power/pm-utils ) rbd? ( sys-cluster/ceph ) sasl? ( dev-libs/cyrus-sasl ) selinux? ( >=sys-libs/libselinux-2.0.85 ) virtualbox? ( || ( app-emulation/virtualbox >=app-emulation/virtualbox-bin-2.2.0 ) ) xen? ( app-emulation/xen-tools app-emulation/xen ) udev? ( virtual/udev >=x11-libs/libpciaccess-0.10.9 ) virt-network? ( net-dns/dnsmasq >=net-firewall/iptables-1.4.10 net-misc/radvd net-firewall/ebtables sys-apps/iproute2[-minimal] firewalld? ( net-firewall/firewalld ) ) elibc_glibc? ( || ( >=net-libs/libtirpc-0.2.2-r1 <sys-libs/glibc-2.14 ) )
+REQUIRED_USE=libvirtd? ( || ( lxc openvz qemu uml virtualbox xen ) ) lxc? ( caps libvirtd ) openvz? ( libvirtd ) qemu? ( libvirtd ) uml? ( libvirtd ) vepa? ( macvtap ) virtualbox? ( libvirtd ) xen? ( libvirtd ) virt-network? ( libvirtd ) firewalld? ( virt-network ) python? ( python_single_target_python2_5? ( python_targets_python2_5 ) python_single_target_python2_6? ( python_targets_python2_6 ) python_single_target_python2_7? ( python_targets_python2_7 ) ^^ ( python_single_target_python2_5 python_single_target_python2_6 python_single_target_python2_7 ) )
+SLOT=0
+SRC_URI=http://libvirt.org/sources/libvirt-1.1.1.tar.gz ftp://libvirt.org/libvirt/libvirt-1.1.1.tar.gz http://dev.gentoo.org/~cardoe/distfiles/libvirt-1.1.1-6e020882.tar.xz
+_eclasses_=autotools	16761a2f972abd686713e5967ff3c754	eutils	63afaaed8aa819fdcb814c7cd39495a2	libtool	b1c8688e60f9580bcb9bb46e08737eb1	linux-info	dd8fdcccc30f117673b4cba4ed4f74a7	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	python-single-r1	b13f5baea5da0da5a5dcc6b8b79706a2	python-utils-r1	e3288ba49a9a4406c283001e4d284aad	readme.gentoo	2466b2f6a77a9600954c6b99ebca6e02	systemd	49c26d08111dd2c62b52cee32151b93b	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
+_md5_=8cb94d1fde75da6ce5c6fdb47b7325f2
